--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			box-sizing: border-box;			
 		}
 
-		#photo {
+		#photo1 {
 			padding: 10px;
 		}
 
@@ -93,16 +93,20 @@
 			background-color: #a62d24;
 		}
 
+		.title {
+			border-top: 1px solid #000;
+				margin-left: 10px;
+				margin-top: 10px;
+		}
+
 		h1 {
-			border-bottom: 1px solid #000;
-			padding-bottom: 10px;
-			margin-top: 10px;
 			margin-left: 10px;
 		}
 	</style>
 </head>
 <body>
-<div id="photo">
+	<h1 class="title">Báo cáo 1</h1>
+<div id="photo1">
 	<table>
 		<tr>
 			<th class="color1" colspan="12">Huyện Vĩnh Thạnh Báo Cáo Ngày <input class="date color1" type="text"></th>
@@ -141,21 +145,30 @@
 		</tr>
 	</table>
 </div>
-<button onclick="takeshot()" class="submit-btn">Chụp ảnh</button>
+<button onclick="takeshot('photo1', 'output1')" class="submit-btn">Chụp ảnh</button>
 <h1>Kết quả:</h1>
-<div id="output"></div>
+<div id="output1"></div>
 
+<!-- table2 -->
+<h1 class="title">Báo cáo 2</h1>
+<div id="photo2">
+	
+</div>
+<button onclick="takeshot('photo2', 'output2')" class="submit-btn">Chụp ảnh</button>
+<h1>Kết quả:</h1>
+<div id="output2"></div>
+
+</body>
 <script type="text/javascript">
 	document.querySelector('.date').value = '01/01/2021'
 	for (let i = 1; i <= 10; i++) {
 			document.getElementById(`c${i}`).value='0'
 		}
-	function takeshot() {
-		let div = document.getElementById('photo');
+	function takeshot(target, output) {
+		let div = document.getElementById(target);
 		html2canvas(div).then(canvas => {
-			document.getElementById('output').appendChild(canvas);
+			document.getElementById(output).appendChild(canvas);
 		})
 	}
 </script>
-</body>
 </html>
